Added the Delete Account API
